Style main section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,284 @@
           </ul>
         </section>
       </header>
-      <main class="main">main</main>
+      <main class="main">
+        <section class="projects">
+          <h2>Your Projects</h2>
+          <div class="project-cards">
+            <div class="card">
+              <h3>Super Cool Project</h3>
+              <p>
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollictudin nibh
+                erat, id facillisis felis accumsan nec.
+              </p>
+              <ul class="card-icons flex">
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share icon"
+                      class="icon"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <h3>Super Cool Project</h3>
+              <p>
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollictudin nibh
+                erat, id facillisis felis accumsan nec.
+              </p>
+              <ul class="card-icons flex">
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share icon"
+                      class="icon"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <h3>Super Cool Project</h3>
+              <p>
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollictudin nibh
+                erat, id facillisis felis accumsan nec.
+              </p>
+              <ul class="card-icons flex">
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share icon"
+                      class="icon"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <h3>Super Cool Project</h3>
+              <p>
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollictudin nibh
+                erat, id facillisis felis accumsan nec.
+              </p>
+              <ul class="card-icons flex">
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share icon"
+                      class="icon"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <h3>Super Cool Project</h3>
+              <p>
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollictudin nibh
+                erat, id facillisis felis accumsan nec.
+              </p>
+              <ul class="card-icons flex">
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share icon"
+                      class="icon"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <h3>Super Cool Project</h3>
+              <p>
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollictudin nibh
+                erat, id facillisis felis accumsan nec.
+              </p>
+              <ul class="card-icons flex">
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/star-plus-outline.svg"
+                      alt="star icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/eye-plus-outline.svg"
+                      alt="eye plus icon"
+                      class="icon"
+                  /></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="assets/icons/share-variant-outline.svg"
+                      alt="share icon"
+                      class="icon"
+                  /></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="announcements">
+          <h2>Announcements</h2>
+          <ul class="announcement-cards">
+            <li>
+              <h3>Site Maintenance</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+                atque in repudiandae vitae pariatur
+              </p>
+              <hr />
+            </li>
+            <li>
+              <h3>Community Share Day</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+                atque in repudiandae vitae pariatur
+              </p>
+              <hr />
+            </li>
+            <li>
+              <h3>Update Privacy Policy</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+                atque in repudiandae vitae pariatur
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="trending">
+          <h2>Trending</h2>
+          <ul class="trending-accounts">
+            <li class="flex">
+              <img
+                src="assets/images/pexels-craig-adderley-3411134.jpg"
+                alt=""
+                class="avatar-small" />
+              <div class="account-info">
+                <p>@tegan</p>
+                <p>World peace builder</p>
+              </div>
+            </li>
+            <li class="flex">
+              <img
+                src="assets/images/pine-apple.jpg"
+                alt=""
+                class="avatar-small" />
+              <div class="account-info">
+                <p>@morgan</p>
+                <p>Super cool projects</p>
+              </div>
+            </li>
+            <li class="flex">
+              <img
+                src="assets/images/pexels-pixabay-264905.jpg"
+                alt=""
+                class="avatar-small" />
+              <div class="account-info">
+                <p>@kendall</p>
+                <p>Life changing app</p>
+              </div>
+            </li>
+            <li class="flex">
+              <img
+                src="assets/images/pexels-skitterphoto-42415.jpg"
+                alt=""
+                class="avatar-small" />
+              <div class="account-info">
+                <p>@alex</p>
+                <p>No traffic maker</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
     </div>
   </body>
 </html>
